@@ -1,0 +1,57 @@
+/* include/pqxx/libconfig.h.  Generated by configure.  */
+/* include/pqxx/config.h.in.  Generated from configure.ac by autoheader.  */
+
+/* Define if std defines the char_traits template and <char> specialization */
+#define HAVE_CHAR_TRAITS 1
+
+/* Define to 1 if you have the <iterator> header file. */
+#define HAVE_ITERATOR 1
+
+/* Define to 1 if you have the <limits> header file. */
+#define HAVE_LIMITS 1
+
+/* Define to 1 if the system has the type `ptrdiff_t'. */
+#define HAVE_PTRDIFF_T 1
+
+/* Do we have InvalidOid definition? */
+/* #undef InvalidOid */
+
+/* Does the standard namespace exist? */
+#define PGSTD std
+
+/* Define if <iterator> lacks an iterator template definition */
+/* #undef PQXX_BROKEN_ITERATOR */
+
+/* Define if function overloading using "using" breaks */
+#define PQXX_BROKEN_USING_DECL 1
+
+/* Define if PostgreSQL has PQescapeString() */
+#define PQXX_HAVE_PQESCAPESTRING 1
+
+/* Define if PostgreSQL has PQfreemem() */
+/* #undef PQXX_HAVE_PQFREEMEM */
+
+/* Define if PostgreSQL has PQfreeNotify() */
+#define PQXX_HAVE_PQFREENOTIFY 1
+
+/* Define if PostgreSQL has PQftable() */
+/* #undef PQXX_HAVE_PQFTABLE */
+
+/* Define if you have the <streambuf> header; if not, <streambuf.h> is used */
+#define PQXX_HAVE_STREAMBUF 1
+
+/* Do we have a PQescapeString function? */
+/* #undef PQescapeString */
+
+/* Do we have a PQfreeNotify function? */
+/* #undef PQfreeNotify */
+
+/* Do we have a PQfreemem function? */
+/* #undef PQfreemem */
+
+/* Do we have a PQftable function? */
+/* #undef PQftable */
+
+/* Define to `unsigned' if <sys/types.h> does not define. */
+/* #undef size_t */
+
