@@ -1,5 +1,7 @@
 1.9.6
  - Fixes in "field table" support
+ - Improved coexistence with client program's config.h, if any
+ - Prefixed autoconf macros used in headers with "PQXX_"
 1.9.5
  - Header file contents moved to .hxx files for editor filetype recognition
  - Fixes wrong timestamp for include/pqxx/result in 1.9.4 distribution
